# Morozov_Kursovoy_Proekt

./: CREATE TABLE booking.docx  Dockerfile  bd.html  hostel.db  ~$розов - Пояснительная записка.docx  Морозов - Пояснительная записка.docx
backend/: chek.html  chek_res.html  hostel.db  html2pdf.py  main.py  pyproject.toml
backend/DB/: hostel  hostel.sql  temp.py
frontend/: package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.jsx  Context.jsx  index.css  index.jsx
frontend/src/components/: Booking.jsx  Contacts.jsx  Footer.jsx  Header.jsx  Main.jsx  MainPage.jsx  Profile.jsx  SignIn.jsx  SignUp.jsx  StartBooking.jsx  Uslugi.jsx
frontend/src/components/ProfileComponents/: AllBooking.jsx  AllUsers.jsx  SelfBooking.jsx
frontend/src/components/ProfileComponents/Edit/: EditBook.jsx  EditUser.jsx
