[tool.poetry]
name = "diplom"
version = "0.1.0"
description = ""
authors = ["Mderka0 <mderka1356@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
Flask = "^3.0.3"
html2pdf = "^0.1"
pyhtml2pdf = "^0.0.7"
flask-cors = "^4.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
